# NicoWnnGK

./: .gitignore  README.md  import-summary.txt  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: openwnn_main.html
app/src/main/cpp/: Application.mk  CMakeLists.txt  out.map
app/src/main/cpp/libwnnDictionary/: Android.mk  CMakeLists.txt  OpenWnnDictionaryImplJni.c
app/src/main/cpp/libwnnEngDic/: CMakeLists.txt
app/src/main/cpp/libwnnJpnDic/: CMakeLists.txt
app/src/main/java/net/gorry/android/input/nicownng/: DefaultSoftKeyboard.java  NicoWnnG.java  NicoWnnGDictionaryImpl.java  NicoWnnGEN.java  NicoWnnGJAJP.java  TextCandidateTask.java  TextCandidatesViewManager.java
app/src/main/java/net/gorry/android/input/nicownng/EN/: NicoWnnGEngineEN.java
app/src/main/java/net/gorry/android/input/nicownng/JAJP/: DefaultSoftKeyboardNico.java  DefaultSoftKeyboardToggle.java  NicoWnnGEngineJAJP.java
app/src/main/res/layout/: candidates.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-ja/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
